[package]
name = "hermitshell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
portable-pty = "0.7.0"

# gpu deps
winit = {version = "0.26"}
env_logger = "0.9"
log = "0.4"
pollster = "0.2.5"
wgpu = "0.12"

# font deps
fontdue = "0.7.2"

# async deps
futures-intrusive = "0.4.1"

# wgpu internal feature for image loading
[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

